; ModuleID = '/home/carl/AnghaBench/streem/src/extr_string.c_str_plus.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_string.c_str_plus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"SS\00", align 1
@STRM_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*, i32*)* @str_plus to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @str_plus(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load i32*, i32** %7, align 8
  %16 = call i32 @strm_get_args(i32* %13, i32 %14, i32* %15, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32* %9, i32* %10)
  %17 = load i32, i32* %9, align 4
  %18 = call i64 @strm_str_len(i32 %17)
  %19 = load i32, i32* %10, align 4
  %20 = call i64 @strm_str_len(i32 %19)
  %21 = add i64 %18, %20
  %22 = call i32 @strm_str_new(i32* null, i64 %21)
  store i32 %22, i32* %11, align 4
  %23 = load i32, i32* %11, align 4
  %24 = call i64 @strm_str_ptr(i32 %23)
  %25 = inttoptr i64 %24 to i8*
  store i8* %25, i8** %12, align 8
  %26 = load i8*, i8** %12, align 8
  %27 = load i32, i32* %9, align 4
  %28 = call i64 @strm_str_ptr(i32 %27)
  %29 = load i32, i32* %9, align 4
  %30 = call i64 @strm_str_len(i32 %29)
  %31 = call i32 @memcpy(i8* %26, i64 %28, i64 %30)
  %32 = load i8*, i8** %12, align 8
  %33 = load i32, i32* %9, align 4
  %34 = call i64 @strm_str_len(i32 %33)
  %35 = getelementptr inbounds i8, i8* %32, i64 %34
  %36 = load i32, i32* %10, align 4
  %37 = call i64 @strm_str_ptr(i32 %36)
  %38 = load i32, i32* %10, align 4
  %39 = call i64 @strm_str_len(i32 %38)
  %40 = call i32 @memcpy(i8* %35, i64 %37, i64 %39)
  %41 = load i8*, i8** %12, align 8
  %42 = load i32, i32* %11, align 4
  %43 = call i64 @strm_str_len(i32 %42)
  %44 = getelementptr inbounds i8, i8* %41, i64 %43
  store i8 0, i8* %44, align 1
  %45 = load i32, i32* %11, align 4
  %46 = call i32 @strm_str_value(i32 %45)
  %47 = load i32*, i32** %8, align 8
  store i32 %46, i32* %47, align 4
  %48 = load i32, i32* @STRM_OK, align 4
  ret i32 %48
}

declare dso_local i32 @strm_get_args(i32*, i32, i32*, i8*, i32*, i32*) #1

declare dso_local i32 @strm_str_new(i32*, i64) #1

declare dso_local i64 @strm_str_len(i32) #1

declare dso_local i64 @strm_str_ptr(i32) #1

declare dso_local i32 @memcpy(i8*, i64, i64) #1

declare dso_local i32 @strm_str_value(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
